Fix: [#1938] Fix distorted UI of mobile view of job detail page

--- a/pages/job/Job.module.scss
+++ b/pages/job/Job.module.scss
@@ -189,7 +189,7 @@
         background-color: $white-3;
         border-top: 1px solid $lightgrey;
         height: 76px;
-        width: 390px;
+        width: 100%;
 
         // .applyBtn {
         //   margin-right: 24px;
